--- a/index.html
+++ b/index.html
@@ -4,18 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>To Do List</title>
     <!-- style -->
     <link rel="stylesheet" href="css/style.css">
-    <!-- script -->
-    <script src="js/script.js" defer></script>
+    <!-- fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
     <!-- vue -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2"></script> -->
+    <!-- script -->
+    <script src="js/script.js" defer></script>
 </head>
 <body>
     <div id="root">
+        <header>
+            <h1>TO DO LIST</h1>
+        </header>
 
+        <nav>
+            <div class="new-todo">
+                <input @keyup.enter="addToDo" v-model="newToDo" type="text" placeholder="Aggiungi un nuovo compito alla lista">
+                <button @click="addToDo"> <i class="fa-solid fa-circle-plus"></i></button>
+            </div>
+        </nav>
+        <div class="todos-container">
+            <h2 class="complete" v-if="todos.length == 0 ">COMPLIMENTI! HAI COMPLETATO TUTTI I COMPITI PER OGGI</h2>
+            <ul>
+                <li v-for="todo in todos" :kay="todo" class="todo">
+                    {{todo.text}}
+                    <i @click="deleteToDo()" class="fa-solid fa-xmark"></i>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 </html>
